--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -97,10 +97,9 @@
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">drive_eta</i><span>Equipo de Transporte</span> </a>
                         <ul class="ml-menu">
                             <li>@Html.ActionLink("Parque Vehícular", "Index", "EquipoTransporte")</li>
-                            <li>@Html.ActionLink("Recarga de combustible", "Index", "RecargaCombustible")</li>
+                            <li>@Html.ActionLink("Recarga de combustible", "Index", "RecargaCombustibles")</li>
                             <li>@Html.ActionLink("Asignacion", "Index", "Asignacion")</li>
                             <li>@Html.ActionLink("Mantenimiento", "Index", "Mantenimiento")</li>
-
                         </ul>
                     </li>
                      <li>
