--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -12,149 +12,151 @@
             new Script { ExtensionSuite = ExtensionSuite.Editors },
             new Script { ExtensionSuite = ExtensionSuite.GridView }
         )
-<section class="content home">
-    <div class="container-fluid">
-        @using (Html.BeginForm("Asignar", "Index", FormMethod.Post))
-        {
-           
-            <div class="block-header">
-                <div class="row">
-                    <div class="col-lg-5 col-md-5 col-sm-12">
-                        <h2>Producto</h2>
-                        <ul class="breadcrumb padding-0">
-                            <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
-                            <li class="breadcrumb-item active">Equipo de Transporte</li>
-                            <li class="breadcrumb-item active">Asignación</li>
-                        </ul>
+<body>
+    @using (Html.BeginForm("Crear", "Asignacion", FormMethod.Post))
+    {
+        <section class="content home">
+            <div class="container-fluid">
+                <div class="block-header">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-5 col-sm-12">
+                            <h2>Producto</h2>
+                            <ul class="breadcrumb padding-0">
+                                <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item active">Equipo de Transporte</li>
+                                <li class="breadcrumb-item active">Asignación</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="row clearfix">
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <div class="card">
-                            <div class="header">
-                                <h2><strong>Asignación de</strong> Vehiculos</h2>
-                            </div>
-                            <div class="body">
-                                <div class="row clearfix">                                    
-                                    <div class="col-md-5">
-                                        <div class="form-group">
-                                            <strong>Chofer</strong>
-                                            @Html.DevExpress().ComboBox(settings =>
-                                            {
-                                                settings.Name = "IdChofer";
-                                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                                settings.SelectedIndex = 0;
-                                                settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                                settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                                settings.Properties.ValueType = typeof(int);
-                                                settings.Properties.TextField = "Nombre";
-                                                settings.Properties.ValueField = "Idusuario";
-                                            }).BindList(ViewBag.Usuarios).Bind(Model.IdChofer).GetHtml()
-                                            @Html.ValidationMessageFor(m => m.IdChofer, "", new { @class = "alert-danger" })
-                                        </div>
-                                    </div>
-                                    <div class="col-md-5">
-                                        <div class="form-group">
-                                            <strong>Vehiculo</strong>
-                                            @Html.DevExpress().ComboBox(settings =>
-                                            {
-                                                settings.Name = "IdVehiculo";
-                                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                                settings.SelectedIndex = 0;
-                                                settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                                settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                                settings.Properties.ValueType = typeof(int);
-                                                settings.Properties.TextField = "DescVehiculo";
-                                                settings.Properties.ValueField = "IdEquipoTransporte";
-                                            }).BindList(ViewBag.Vehiculos).Bind(Model.IdVehiculo).GetHtml()
-                                            @Html.ValidationMessageFor(m => m.IdVehiculo, "", new { @class = "alert-danger" })
-                                        </div>
-                                    </div>
-                           
+                    <div class="row clearfix">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="card">
+                                <div class="header">
+                                    <h2><strong>Asignación de</strong> Vehiculos</h2>
                                 </div>
-                                <div class="row clearfix">
-                                    <div class="col-md-2 text-right">
-                                        <strong>&nbsp; </strong>
-                                        <div class="form-group">
-                                            @if (ViewBag.EsEdicion == null)
-                                            {
-                                                <button btn id="BtnCrear" formaction="Crear" class="btn btn-primary btn-round">
-                                                    <i class="zmdi zmdi-plus"></i> Agregar
-                                                </button>
-                                            }
-                                            else
-                                            {
-                                                <button btn id="btnUpDate" formaction="EditarProducto" class="btn btn-primary btn-round">
-                                                    <i class="zmdi zmdi-swap"></i> Terminar Edicion
-                                                </button>
-                                            }
-                                        </div>
-                                    </div>
-                                </div>
-                                @if (ViewBag.MensajeError != null)
-                                {
-                                    <br />
-                                    <div id="DivAlerta" class="container">
-                                        <div class="alert alert-danger">
-                                            <div class="alert-icon">
-                                                <i class="zmdi zmdi-block"></i>
+                                <div class="body">
+                                    <div class="row clearfix">
+                                        <div class="col-md-5">
+                                            <div class="form-group">
+                                                <strong>Chofer</strong>
+                                                @Html.DevExpress().ComboBox(settings =>
+                                           {
+                                               settings.Name = "IdChofer";
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                               settings.SelectedIndex = 0;
+                                               settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                               settings.Properties.ValueType = typeof(int);
+                                               settings.Properties.TextField = "Nombre";
+                                               settings.Properties.ValueField = "Idusuario";
+                                           }).BindList(ViewBag.Usuarios).Bind(Model.IdChofer).GetHtml()
+                                                @Html.ValidationMessageFor(m => m.IdChofer, "", new { @class = "alert-danger" })
                                             </div>
-                                            <strong>
-                                                @ViewBag.MensajeError
-                                            </strong>
                                         </div>
-                                    </div>
-                                }                          
-                                <div class="row clearfix">                         
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <input type="text" placeholder="Buscar" id="txtNumeroFiltro" class="form-control" />
+                                        <div class="col-md-5">
+                                            <div class="form-group">
+                                                <strong>Vehiculo</strong>
+                                                @Html.DevExpress().ComboBox(settings =>
+                                           {
+                                               settings.Name = "IdVehiculo";
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                               settings.SelectedIndex = 0;
+                                               settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                               settings.Properties.ValueType = typeof(int);
+                                               settings.Properties.TextField = "DescVehiculo";
+                                               settings.Properties.ValueField = "IdEquipoTransporte";
+                                           }).BindList(ViewBag.Vehiculos).Bind(Model.IdVehiculo).GetHtml()
+                                                @Html.ValidationMessageFor(m => m.IdVehiculo, "", new { @class = "alert-danger" })
+                                            </div>
                                         </div>
+
                                     </div>
-                                </div>
-                                <div class="row clearfix blockquote blockquote-info btn-round">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-hover filterable" name="RequisicionProductos">
-                                            <thead>
-                                                <tr>
-                                                    <td><strong>Id</strong></td>
-                                                    <td><strong>Nombre Chofer</strong></td>
-                                                    <td><strong>Vehiculo</strong></td>                                                    
-                                                    <td><strong>Acción</strong></td>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (var asign in ViewBag.Asignaciones)
+                                    <div class="row clearfix">
+                                        <div class="col-md-2 text-right">
+                                            <strong>&nbsp; </strong>
+                                            <div class="form-group">
+                                                @if (ViewBag.EsEdicion == null)
                                                 {
-                                                    <tr>
-                                                        <td>@asign.IdAsignacion </td>
-                                                        <td>@asign.Chofer </td>
-                                                        <td>@asign.Vehiculo</td>                                                      
-                                                        <td>
-                                                            <a href="@Url.Action("Eliminar", "Asignacion" , new { Id=asign.IdAsignacion })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                <i class="material-icons">delete</i>
-                                                                <span>Eliminar producto</span>
-                                                            </a>
-                                                        </td>
-                                                    </tr>
+                                                    <button btn id="BtnCrear" formaction="Crear" class="btn btn-primary btn-round">
+                                                        <i class="zmdi zmdi-plus"></i> Agregar
+                                                    </button>
                                                 }
-                                            </tbody>
-                                        </table>
+                                                else
+                                                {
+                                                    <button btn id="btnUpDate" formaction="EditarProducto" class="btn btn-primary btn-round">
+                                                        <i class="zmdi zmdi-swap"></i> Terminar Edicion
+                                                    </button>
+                                                }
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row clearfix">
-                                    <div class="col-md-6">
-                                        Página @(ViewBag.Productos.PageCount < ViewBag.Asignaciones.PageNumber ? 0 : ViewBag.Asignaciones.PageNumber) de @ViewBag.Asignaciones.PageCount
+                                    @if (ViewBag.MensajeError != null)
+                                    {
+                                        <br />
+                                        <div id="DivAlerta" class="container">
+                                            <div class="alert alert-danger">
+                                                <div class="alert-icon">
+                                                    <i class="zmdi zmdi-block"></i>
+                                                </div>
+                                                <strong>
+                                                    @ViewBag.MensajeError
+                                                </strong>
+                                            </div>
+                                        </div>
+                                    }
+                                    <div class="row clearfix">
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <input type="text" placeholder="Buscar" id="txtNumeroFiltro" class="form-control" />
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-md-6 text-right">
-                                        @Html.PagedListPager((IPagedList)ViewBag.Asignaciones, page => Url.Action("Index", new { page, @class = "btn btn-primary btn-simple" }))
+                                    <div class="row clearfix blockquote blockquote-info btn-round">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-hover filterable" name="RequisicionProductos">
+                                                <thead>
+                                                    <tr>
+                                                        <td><strong>Id</strong></td>
+                                                        <td><strong>Nombre Chofer</strong></td>
+                                                        <td><strong>Vehiculo</strong></td>
+                                                        <td><strong>Acción</strong></td>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @foreach (var asign in ViewBag.Asignaciones)
+                                                    {
+                                                        <tr>
+                                                            <td>@asign.IdAsignacion </td>
+                                                            <td>@asign.Chofer </td>
+                                                            <td>@asign.Vehiculo</td>
+                                                            <td>
+                                                                <a href="@Url.Action("Eliminar", "Asignacion", new { Id = asign.IdAsignacion })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <i class="material-icons">delete</i>
+                                                                    <span>Eliminar producto</span>
+                                                                </a>
+                                                            </td>
+                                                        </tr>
+                                                    }
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                    <div class="row clearfix">
+                                        <div class="col-md-6">
+                                            Página @(ViewBag.Asignaciones.PageCount < ViewBag.Asignaciones.PageNumber ? 0 : ViewBag.Asignaciones.PageNumber) de @ViewBag.Asignaciones.PageCount
+                                        </div>
+                                        <div class="col-md-6 text-right">
+                                            @Html.PagedListPager((IPagedList)ViewBag.Asignaciones, page => Url.Action("Index", new { page, @class = "btn btn-primary btn-simple" }))
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
-        }
-    </div>
-</section>
+        </section>
+    }
+</body>
